--- a/Resomar/WebContent/View/ong/editModal.css
+++ b/Resomar/WebContent/View/ong/editModal.css
@@ -1,17 +1,7 @@
-div.modal-header.ng-scope {
-    background-color: #1E3B2F;
-}
-.title-header {
-    color: #85793C;
-}
-.button-cancel {
-    background-color: #1E3B2F;
-    color: white;
-}
-.button-save {
-    background-color: #85793C;
-    color: white;
-}
+
 .speciality-form-modal {
+    padding: 10px !important;
+}
+.ong-form-edit {
     padding: 10px !important;
 }
