--- a/Resomar/WebContent/View/specialist/editModal.html
+++ b/Resomar/WebContent/View/specialist/editModal.html
@@ -3,7 +3,7 @@
     <h4 class="title-header">Editar Especialista</h4>
 </div>
 <div class="modal-body" id="modal-body">
-    <form class="specialist-form"  name="specialistForm">
+    <form class="specialist-form-modal"  name="specialistForm">
         <div class="specialist-add row">
             <div class="col-md-6">
                 <input class="form-control input nome" type="text"
