--- a/Resomar/WebContent/View/specialist/specialist.html
+++ b/Resomar/WebContent/View/specialist/specialist.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="View/specialist/specialist.css"/>
-<div class="medic-register">
+<div class="specialist-register">
     <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Especialista
             <a title="Minimizar"><i ng-class="{'fas fa-window-minimize': !changeIcon, 'fas fa-plus': changeIcon}"
