--- a/Resomar/WebContent/View/login/login.html
+++ b/Resomar/WebContent/View/login/login.html
@@ -15,7 +15,7 @@
                     <div class="form-group">
                         <input type="text" id="user" class="form-control" ng-model="loginCtrl.userName"
                                ng-class="{'invalid': formLogin.userName.$invalid && formLogin.userName.$touched}"
-                               focus="true" name="userName" required>
+                               name="userName" required>
                         <label class="form-control-placeholder" for="user">Usuário</label>
                     </div>
                     <div class="form-group">
