--- a/Resomar/WebContent/View/needs/editModal.html
+++ b/Resomar/WebContent/View/needs/editModal.html
@@ -23,10 +23,10 @@
                     <option value="high">Alta</option>
                 </select>
             </label>
-            <div class="form-group col-sm-6 col-lg-6 col-xl-6 col-md-6">
+            <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
                     <textarea type="text" id="observation" name="observation" class="form-control" ng-model="needsCtrl.editNeeds.observation"
                               ng-class="{'invalid': formNeeds.observation.$invalid && formNeeds.observation.$touched}"
-                              name="observation"></textarea>
+                              name="observation" required="false"></textarea>
                 <label class="form-control-placeholder" for="observation">Observações</label>
             </div>
         </div>
