--- a/Resomar/WebContent/View/patient/editModal.html
+++ b/Resomar/WebContent/View/patient/editModal.html
@@ -5,10 +5,10 @@
 <div class="modal-body" id="modal-body">
     <form class="patient-form-modal" name="formPatientEdit">
         <div class="row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-5">
                 <input type="text" id="identificationEdit" class="form-control" ng-model="patientCtrl.editPatient.identificationEdit"
                        ng-class="{'invalid': formPatientEdit.identificationEdit.$invalid && formPatientEdit.identificationEdit.$touched}"
-                       focus="true" name="identificationEdit" required>
+                        name="identificationEdit" required>
                 <label class="form-control-placeholder" for="identificationEdit">Identificação</label>
             </div>
             <div class="form-group col-md-2">
@@ -17,7 +17,7 @@
                        name="ageEdit" required>
                 <label class="form-control-placeholder" for="ageEdit">Idade</label>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-5">
                 <input type="text" id="responsibleEdit" class="form-control" ng-model="patientCtrl.editPatient.responsibleEdit"
                        ng-class="{'invalid': formPatient.responsibleEdit.$invalid && formPatient.responsibleEdit.$touched}"
                        name="responsibleEdit" required>
