--- a/Resomar/WebContent/View/specialist/editModal.css
+++ b/Resomar/WebContent/View/specialist/editModal.css
@@ -1,17 +1,4 @@
-div.modal-header.ng-scope {
-    background-color: #1E3B2F;
-}
-.title-header {
-    color: #85793C;
-}
-.button-cancel {
-    background-color: #1E3B2F;
-    color: white;
-}
-.button-save {
-    background-color: #85793C;
-    color: white;
-}
-.speciality-form-modal {
+
+.specialist-form-modal {
     padding: 10px !important;
 }
