--- a/Resomar/WebContent/index.css
+++ b/Resomar/WebContent/index.css
@@ -8,7 +8,7 @@
 
 .form-control-placeholder {
     position: absolute !important;
-    top: 10px !important;
+    top: 25px !important;
     padding: 3px 0 0 13px !important;
     transition: all 200ms !important;
     opacity: 0.5 !important;
@@ -47,4 +47,162 @@
     padding: 3px 0 0 13px !important;
     transition: all 200ms !important;
     opacity: 0.5 !important;
+}
+.button-edit {
+    background: #85793c;
+}
+
+.button-trash {
+    background: #1E3B2F;
+}
+.fa-pencil-alt {
+    font-size: 13px;
+    color: white;
+}
+
+.fa-trash-alt {
+    font-size: 13px;
+    color: white;
+}
+
+.icons {
+    float: right;
+}
+.btn-cancel {
+    background: #1E3B2F;
+    color: white;
+}
+
+.btn-save {
+    background: #85793c;
+    color: white;
+}
+
+.btn-cancel:hover {
+    background: #162b22;
+}
+
+.btn-save:hover {
+    background: #695f2f;
+}
+
+
+.fast-acess {
+    margin-left: 22%;
+    margin-top: 2%;
+    margin-right: 1.5%;
+}
+
+.institution-form {
+    padding: 30px !important;
+}
+
+.card-header {
+    background-color: #1E3B2F;
+    color: #85793C;
+}
+
+.buttons {
+    margin-top: 20px;
+}
+
+.table-striped {
+    width: 76%;
+    margin-right: 55px;
+    float: right;
+    margin-top: 20px;
+}
+
+.fa-window-minimize {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 2px;
+}
+
+.fa-window-minimize:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0 auto;
+    margin-top: 2px;
+}
+
+a {
+    color: inherit;
+}
+
+.table-striped {
+    width: 76%;
+    margin-right: 55px;
+    float: right;
+    margin-top: 20px;
+}
+
+
+.fa-window-minimize {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 2px;
+}
+.fa-plus {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 7px;
+}
+
+.fa-window-minimize:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0 auto;
+    margin-top: 2px;
+}
+
+.fa-plus:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0 auto;
+    margin-top: 7px;
+}
+
+a {
+    color: inherit;
+}
+.icons {
+    float: right;
+}
+.buttons {
+    text-align: right;
+}
+.buttons {
+    margin-top: 20px;
+}
+.hide {
+    display: none !important;
+}
+
+/*modal css*/
+div.modal-header.ng-scope {
+    background-color: #1E3B2F;
+}
+.title-header {
+    color: #85793C;
+}
+.button-cancel {
+    background-color: #1E3B2F;
+    color: white;
+}
+.button-save {
+    background-color: #85793C;
+    color: white;
 }
