--- a/Resomar/WebContent/View/ong/ong.html
+++ b/Resomar/WebContent/View/ong/ong.html
@@ -36,9 +36,9 @@
                     </select>
                 </label>
                 <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                     <textarea type="text" id="description" name="description" class="form-control"
+                     <input type="text" id="description" name="description" class="form-control"
                                ng-model="ongCtrl.newOng.description"
-                               name="description" required="false"></textarea>
+                               name="description" required="false">
                     <label class="form-control-placeholder" for="description">Descrição brévia da instituição</label>
                 </div>
                 <div class="buttons col-md-12" style="text-align: right">
