--- a/Resomar/WebContent/View/needs/editModal.html
+++ b/Resomar/WebContent/View/needs/editModal.html
@@ -24,9 +24,10 @@
                 </select>
             </label>
             <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <textarea type="text" id="observation" name="observation" class="form-control" ng-model="needsCtrl.editNeeds.observation"
+                    <input type="text" id="observation" name="observation" class="form-control" ng-model="needsCtrl.editNeeds.observation"
+
                               ng-class="{'invalid': formNeeds.observation.$invalid && formNeeds.observation.$touched}"
-                              name="observation" required="false"></textarea>
+                              name="observation" required="false"></input>
                 <label class="form-control-placeholder" for="observation">Observações</label>
             </div>
         </div>
