--- a/Resomar/WebContent/View/needs/needs.html
+++ b/Resomar/WebContent/View/needs/needs.html
@@ -25,9 +25,9 @@
                     </select>
                 </label>
                 <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <textarea type="text" id="observation" name="observation" class="form-control" ng-model="needsCtrl.newNeeds.observation"
+                    <input type="text" id="observation" name="observation" class="form-control" ng-model="needsCtrl.newNeeds.observation"
                               ng-class="{'invalid': formNeeds.observation.$invalid && formNeeds.observation.$touched}"
-                              name="observation" required="false"></textarea>
+                              name="observation" required="false"></input>
                     <label class="form-control-placeholder" for="observation">Observações</label>
                 </div>
                 <div class="buttons col-md-12" style="text-align: right">
